app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: will-deployment
  labels:
    app: wil42-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil42-playground
  template:
    metadata:
      labels:
        app: wil42-playground
    spec:
      containers:
      - name: wil42-playground
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
