app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wil-playground
  name: wil-playground-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: wil-playground
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8888

# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: will42-playground
#   name: will-service
#   namespace: dev
# spec:
#   type: ClusterIP
#   selector:
#     app: will42-playground
#   ports:
#   - name: http
#     port: 8888
#     protocol: TCP
#     targetPort: 8888
#   type: LoadBalancer
